src/main/kubernetes/app.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app-kubernetes
          image: anaiamandii/practice-project
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    app: app
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - app
  rules:
    - host: app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 8080
