src/main/kubernetes/keycloak.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak-kubernetes
          image: quay.io/keycloak/keycloak:latest
          imagePullPolicy: Always
          args: ["start-dev"]
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: keycloak-persistent-storage
              mountPath: /var/lib/keycloak/data
              subPath: keycloak_data
      volumes:
        - name: keycloak-persistent-storage
          persistentVolumeClaim:
            claimName: keycloak-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  type: NodePort
  ports:
    - port: 8080
  selector:
    app: keycloak
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kcloak
  rules:
    - host: kcloak
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
